# bgfx

./: bgfx_CMakeLists.txt  bgfx_shaderc_CMakeLists.txt  embed_shader.py
conan/: CMakeLists.txt  conanfile.py
conan/bgfx/: CMakeLists.txt  conanfile.py
conan/bgfx_common/: CMakeLists.txt  conanfile.py  embed_shader.cmake  embed_shader.py
conan/bgfx_shaderc/: CMakeLists.txt  conanfile.py
examples/23-vectordisplay/: vectordisplay.cpp  vectordisplay.h
examples/common/debugdraw/: .gitignore
examples/common/entry/: entry.cpp  entry.h  entry_android.cpp  entry_glfw.cpp  entry_html5.cpp  entry_ios.mm  entry_p.h  entry_sdl.cpp
examples/common/imgui/: imgui.cpp  imgui.h
include/bgfx/: embedded_shader.h
scripts/: example-common.lua
src/: glcontext_html5.cpp  renderer_gl.cpp
